--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
               <span class="tag">Virtual Reality</span>
             </div>
             <div class="actions">
-              <a class="btn" href="projects/asters.html">Open</a>
+              <a class="btn" href="Professional-Portfolio/projects/asters.html">Open</a>
               <a class="btn" target="_blank" rel="noopener" href="https://youtu.be/vZf56XWqUsY">Video</a>
             </div>
           </div>
@@ -149,7 +149,7 @@
               <span class="tag">Virtual Reality</span>
             </div>
             <div class="actions">
-              <a class="btn" href="projects/dental-vr.html">Open</a>
+              <a class="btn" href="Professional-Portfolio/projects/dental-vr.html">Open</a>
               <a class="btn" target="_blank" rel="noopener" href="https://youtu.be/q3jmrM6cjmI">Video</a>
             </div>
           </div>
@@ -165,7 +165,7 @@
               <span class="tag">Video Production</span>
             </div>
             <div class="actions">
-              <a class="btn" href="projects/ravana-vr.html">Open</a>
+              <a class="btn" href="Professional-Portfolio/projects/ravana-vr.html">Open</a>
               <a class="btn" target="_blank" rel="noopener" href="https://youtu.be/1x3rMaC1Cc4">Video</a>
             </div>
           </div>
@@ -224,7 +224,7 @@
                 <div class="place">IIT Bombay</div>
                 <div class="where">Research Assistance — Mumbai, India</div>
               </div>
-              <a class="btn" href="#projects">View work</a>
+              <a class="btn" href="#projects"> work</a>
             </div>
             <div class="row">
               <div>
