--- a/project/asters.html
+++ b/project/asters.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Ravana VR — Cinematic Showcase — Project</title>
+  <title>ASTERS — Active Shooter Tracking & Evacuation Routing — Project</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
   
   <style>
@@ -69,37 +69,54 @@
     <div class="wrap top-inner">
       <div class="crumbs"><a href="../index.html">← Back</a></div>
       <div class="btns">
-        <a class="btn" target="_blank" rel="noopener" href="https://youtu.be/1x3rMaC1Cc4">Video</a>
-        
+        <a class="btn" target="_blank" rel="noopener" href="https://youtu.be/vZf56XWqUsY">Video</a>
+        <a class="btn" target="_blank" rel="noopener" href="https://drive.google.com/file/d/1XUJs0Y8INELjnUNagX6r9uAhdaMSqK4y/view?usp=drive_link">Report</a>
       </div>
     </div>
   </header>
 
-  <div class="cover" style="background-image:url('assets/ravana-hero.jpg')"></div>
+  <div class="cover" style="background-image:url('assets/asters-hero.jpg')"></div>
 
   <main class="wrap">
     <div class="panel" style="margin-top:-30px">
-      <h1>Ravana VR — Cinematic Showcase</h1>
-      <div class="tags"><span class="tag">Virtual Reality</span><span class="tag">Showcase</span><span class="tag">Unreal + Blender</span></div>
-      <p>Immersive VR cinematic based on the character Ravana for a college event—combining animation, stage‑like lighting, and synchronized audio to deliver a visually rich experience with detailed environments and timed sequences.</p>
-      <p><strong>Client:</strong> University purpose (showcase)<br>
-         <strong>Software:</strong> Unreal Engine, Blender<br>
-         <strong>Type:</strong> Virtual Reality<br>
-         <strong>Goal:</strong> Create an immersive, cinematic VR experience for cultural storytelling.
+      <h1>ASTERS — Active Shooter Tracking & Evacuation Routing</h1>
+      <div class="tags"><span class="tag">Simulation</span><span class="tag">Unreal + Python</span><span class="tag">OpenCV</span></div>
+      <p>Built to address intelligent evacuation planning during active threat scenarios. We combined Unreal Engine indoor simulations with OpenCV shooter detection and Python‑based egress algorithms. Real‑time pathfinding and LED guidance enable data‑driven evaluation of safe escape strategies.</p>
+      <p><strong>Client:</strong> National Science Foundation (NSF)<br>
+         <strong>Software:</strong> Unreal Engine, Python (OpenCV)<br>
+         <strong>Type:</strong> Simulation<br>
+         <strong>Goal:</strong> Development of a real‑time virtual simulation system for emergency evacuation.
       </p>
     </div>
 
     <section class="two">
       <div class="panel">
         <h2>My role</h2>
-        <p>Environment lookdev, animation/sequencing, lighting, audio sync, real‑time polish.</p>
+        <p>Environment and behavior logic; camera tools; egress routing & LED guidance integration; logging & analysis pipeline.</p>
       </div>
       <div class="panel">
         <h2>Tools / Stack</h2>
-        <p>Unreal Engine, Blender, Sequencer</p>
+        <p>Unreal Engine, Python, OpenCV, CSV logging, A* pathfinding</p>
         <h2 style="margin-top:10px">Context</h2>
-        <p>Showcase project to bring mythology to life with modern VR visuals.</p>
+        <p>University research on safe egress strategies under dynamic threats.</p>
       </div>
+    <section>
+          <div class="workflow panel">
+            <h2>WORKFLOW</h2>
+            <div class="flow" style="display:grid;grid-template-columns:repeat(12,1fr);gap:12px;align-items:center">
+        <div style="grid-column:span 4;border:1px dashed var(--border);border-radius:12px;background:#fff;height:150px;display:grid;place-items:center;color:#6b7280;font-weight:600">assets/asters-wf1.jpg<br>Floorplan</div><div style="grid-column:span 1;text-align:center;color:#9ca3af">→</div><div style="grid-column:span 4;border:1px dashed var(--border);border-radius:12px;background:#fff;height:150px;display:grid;place-items:center;color:#6b7280;font-weight:600">assets/asters-wf2.jpg<br>Unreal Environment</div><div style="grid-column:span 1;text-align:center;color:#9ca3af">→</div><div style="grid-column:span 4;border:1px dashed var(--border);border-radius:12px;background:#fff;height:150px;display:grid;place-items:center;color:#6b7280;font-weight:600">assets/asters-wf3.jpg<br>Image Extraction → OpenCV/Python</div><div style="grid-column:span 1;text-align:center;color:#9ca3af">→</div><div style="grid-column:span 4;border:1px dashed var(--border);border-radius:12px;background:#fff;height:150px;display:grid;place-items:center;color:#6b7280;font-weight:600">assets/asters-wf4.jpg<br>Egress Input / Backend Scripting</div></div></div>
+    <section>
+      <div class="panel">
+        <h2>Process</h2>
+        <ul>
+          <li>Translate floor plans into a navigable 3D environment with NavMesh and agents.</li>
+<li>In Python/OpenCV, detect target events and stream positions into UE actors.</li>
+<li>Run A* pathfinding to compute safe egress paths; drive dynamic LED guidance.</li>
+<li>Provide researcher tools: camera presets, overlays, and heat‑map visualizations.</li>
+<li>Log each run to CSV for replay and parameter sweeps; tune performance and export video/report.</li>
+        </ul>
+      </div>
+    </section>
     <section>
   <h2>Process</h2>
   <ol>
@@ -109,18 +126,8 @@
     <li><strong>Testing & Iteration:</strong> Conducted multiple test runs, collected feedback, and iteratively refined features.</li>
     <li><strong>Deployment:</strong> Packaged and delivered the project for live demonstration, ensuring stability and performance.</li>
   </ol>
+</section>
 
-    <section>
-      <div class="panel">
-        <h2>Process</h2>
-        <ul>
-          <li>Develop visual concept and mood; gather style references.</li>
-<li>Model and assemble the set; establish lighting to support tone and depth.</li>
-<li>Choreograph cameras in Sequencer; time beats to audio.</li>
-<li>Add animation passes and polish with post‑fx; profile and export the final VR piece.</li>
-        </ul>
-      </div>
-    </section>
-    </main>
+</main>
 </body>
 </html>
