--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
               <span class="tag">Virtual Reality</span>
             </div>
             <div class="actions">
-              <a class="btn" href="project/asters.html">Open</a>
+              <a class="btn" href="https://github.com/Jeeva000111/Portfolio/blob/b6600de32b23324c91d12a38142b88a8096a9c47/project/asters.html">Open</a>
               <a class="btn" target="_blank" rel="noopener" href="https://youtu.be/vZf56XWqUsY">Video</a>
             </div>
           </div>
