--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             real-time 3D, and human-centered design—focused on simulation, interaction, and digital twins.
           </p>
         </div>
-        <div class="portrait" title="Replace with assets/portrait.jpg"></div>
+        <div class="portrait" title="Profile.jpg"></div>
       </div>
     </section>
 
@@ -112,7 +112,7 @@
       <h2>Projects</h2>
       <div class="cards">
         <article class="card">
-          <div class="thumb" title="Replace with assets/project-truck.jpg"></div>
+          <div class="thumb" title="A.png"></div>
           <div class="meta">
             <div class="title">Design & Analysis of Emergency Evacuation Simulations</div>
             <div class="tags">
@@ -128,7 +128,7 @@
         </article>
 
         <article class="card">
-          <div class="thumb" title="Replace with assets/project-maharashtra.jpg"></div>
+          <div class="thumb" title="M.png"></div>
           <div class="meta">
             <div class="title">Maharashtra Truck Simulation</div>
             <div class="tags">
@@ -142,7 +142,7 @@
         </article>
 
         <article class="card">
-          <div class="thumb" title="Replace with assets/project-dental.jpg"></div>
+          <div class="thumb" title="Dental_Front.png"></div>
           <div class="meta">
             <div class="title">Dental VR Project</div>
             <div class="tags">
@@ -157,7 +157,7 @@
         </article>
 
         <article class="card">
-          <div class="thumb" title="Replace with assets/project-ravana.jpg"></div>
+          <div class="thumb" title="Ravana_Front.png"></div>
           <div class="meta">
             <div class="title">VR Project (Ravana VR)</div>
             <div class="tags">
