--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       <h2>Projects</h2>
       <div class="cards">
         <article class="card">
-          <div class="thumb" title="A.png"></div>
+          <div class="thumb" style="background-image:url('assets/A.png')"></div>
           <div class="meta">
             <div class="title">Design & Analysis of Emergency Evacuation Simulations</div>
             <div class="tags">
@@ -128,7 +128,7 @@
         </article>
 
         <article class="card">
-          <div class="thumb" title="M.png"></div>
+          <div class="thumb" style="background-image:url('assets/M.png')"></div>
           <div class="meta">
             <div class="title">Maharashtra Truck Simulation</div>
             <div class="tags">
@@ -142,7 +142,7 @@
         </article>
 
         <article class="card">
-          <div class="thumb" title="Dental_Front.png"></div>
+          <div class="thumb" style="background-image:url('assets/Dental_Front.png')"></div>
           <div class="meta">
             <div class="title">Dental VR Project</div>
             <div class="tags">
@@ -157,7 +157,7 @@
         </article>
 
         <article class="card">
-          <div class="thumb" title="Ravana_Front.png"></div>
+          <div class="thumb" style="background-image:url('assets/Ravana_Front.png')"></div>
           <div class="meta">
             <div class="title">VR Project (Ravana VR)</div>
             <div class="tags">
