--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             real-time 3D, and human-centered design—focused on simulation, interaction, and digital twins.
           </p>
         </div>
-        <div class="portrait" title="Profile.jpg"></div>
+        <div class="portrait" style="background-image:url('assets/Profile.jpg')" title="Profile photo"></div>
       </div>
     </section>
 
