--- a/index.html
+++ b/index.html
@@ -222,34 +222,83 @@
       </div>
     </section>
 
-    <section id="skills">
-      <h2>Skills</h2>
-      <div class="tabs">
-        <button class="tab active" data-tab="expertise">Expertise</button>
-        <button class="tab" data-tab="software">Software</button>
-        <button class="tab" data-tab="language">Language</button>
-      </div>
-      <div class="tiles" data-pane="expertise">
-        <div class="tile"><div class="ph"></div><div class="cap">Video Editing</div></div>
-        <div class="tile"><div class="ph"></div><div class="cap">Photography</div></div>
-        <div class="tile"><div class="ph"></div><div class="cap">Artificial Intelligence</div></div>
-        <div class="tile"><div class="ph"></div><div class="cap">Machine Learning</div></div>
-        <div class="tile"><div class="ph"></div><div class="cap">Digital Twin</div></div>
-        <div class="tile"><div class="ph"></div><div class="cap">Augmented Reality</div></div>
-        <div class="tile"><div class="ph"></div><div class="cap">Virtual Reality</div></div>
-        <div class="tile"><div class="ph"></div><div class="cap">Prompt Engineering</div></div>
-      </div>
-      <div class="tiles" data-pane="software" style="display:none">
-        <div class="tile"><div class="ph"></div><div class="cap">Unreal Engine</div></div>
-        <div class="tile"><div class="ph"></div><div class="cap">Blender</div></div>
-        <div class="tile"><div class="ph"></div><div class="cap">Python</div></div>
-        <div class="tile"><div class="ph"></div><div class="cap">OpenCV</div></div>
-      </div>
-      <div class="tiles" data-pane="language" style="display:none">
-        <div class="tile"><div class="ph"></div><div class="cap">English</div></div>
-        <div class="tile"><div class="ph"></div><div class="cap">Tamil</div></div>
-      </div>
-    </section>
+<section id="skills">
+  <h2>Skills</h2>
+  <div class="tabs">
+    <button class="tab active" data-tab="expertise">Expertise</button>
+    <button class="tab" data-tab="software">Software</button>
+    <button class="tab" data-tab="language">Language</button>
+  </div>
+
+  <!-- Expertise -->
+  <div class="tiles" data-pane="expertise">
+    <div class="tile">
+      <div class="ph" style="background:url('./VE.webp') center/cover no-repeat"></div>
+      <div class="cap">Video Editing</div>
+    </div>
+    <div class="tile">
+      <div class="ph" style="background:url('./PG.webp') center/cover no-repeat"></div>
+      <div class="cap">Photography</div>
+    </div>
+    <div class="tile">
+      <div class="ph" style="background:url('./AI.webp') center/cover no-repeat"></div>
+      <div class="cap">Artificial Intelligence</div>
+    </div>
+    <div class="tile">
+      <div class="ph" style="background:url('./ML.webp') center/cover no-repeat"></div>
+      <div class="cap">Machine Learning</div>
+    </div>
+    <div class="tile">
+      <div class="ph" style="background:url('./DL.webp') center/cover no-repeat"></div>
+      <div class="cap">Digital Twin</div>
+    </div>
+    <div class="tile">
+      <div class="ph" style="background:url('./AR.webp') center/cover no-repeat"></div>
+      <div class="cap">Augmented Reality</div>
+    </div>
+    <div class="tile">
+      <div class="ph" style="background:url('./VR.webp') center/cover no-repeat"></div>
+      <div class="cap">Virtual Reality</div>
+    </div>
+    <div class="tile">
+      <div class="ph" style="background:url('./PE.webp') center/cover no-repeat"></div>
+      <div class="cap">Prompt Engineering</div>
+    </div>
+  </div>
+
+  <!-- Software -->
+  <div class="tiles" data-pane="software" style="display:none">
+    <div class="tile">
+      <div class="ph" style="background:url('./UE.webp') center/cover no-repeat"></div>
+      <div class="cap">Unreal Engine</div>
+    </div>
+    <div class="tile">
+      <div class="ph" style="background:url('./B.webp') center/cover no-repeat"></div>
+      <div class="cap">Blender</div>
+    </div>
+    <div class="tile">
+      <div class="ph" style="background:url('./python.webp') center/cover no-repeat"></div>
+      <div class="cap">Python</div>
+    </div>
+    <div class="tile">
+      <div class="ph" style="background:url('./AC.webp') center/cover no-repeat"></div>
+      <div class="cap">AutoCAD</div>
+    </div>
+  </div>
+
+  <!-- Languages -->
+  <div class="tiles" data-pane="language" style="display:none">
+    <div class="tile">
+      <div class="ph" style="background:url('./E.webp') center/cover no-repeat"></div>
+      <div class="cap">English</div>
+    </div>
+    <div class="tile">
+      <div class="ph" style="background:url('./T.webp') center/cover no-repeat"></div>
+      <div class="cap">Tamil</div>
+    </div>
+  </div>
+</section>
+
 
     <section id="contact">
       <div class="contact">
