--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
       <div class="cap">Machine Learning</div>
     </div>
     <div class="tile">
-      <div class="ph" style="background:url('./DL.webp') center/cover no-repeat"></div>
+      <div class="ph" style="background:url('./DT.webp') center/cover no-repeat"></div>
       <div class="cap">Digital Twin</div>
     </div>
     <div class="tile">
@@ -277,7 +277,7 @@
       <div class="cap">Blender</div>
     </div>
     <div class="tile">
-      <div class="ph" style="background:url('./python.webp') center/cover no-repeat"></div>
+      <div class="ph" style="background:url('./Python.webp') center/cover no-repeat"></div>
       <div class="cap">Python</div>
     </div>
     <div class="tile">
