--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
             </div>
             <div class="actions">
               <a class="btn" href="projects/maharashtra-truck.html">Open</a>
+               <a class="btn" target="_blank" rel="noopener" href="https://www.youtube.com/watch?v=7zgsyIyo7qQ">Video</a>
             </div>
           </div>
         </article>
