--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
               <span class="tag">Virtual Reality</span>
             </div>
             <div class="actions">
-              <a class="btn" href="projects/asters.html">Open</a>
+              <a class="btn" href="asters.html">Open</a>
               <a class="btn" target="_blank" rel="noopener" href="https://youtu.be/vZf56XWqUsY">Video</a>
             </div>
           </div>
@@ -136,7 +136,7 @@
               <span class="tag">VR</span>
             </div>
             <div class="actions">
-              <a class="btn" href="projects/maharashtra-truck.html">Open</a>
+              <a class="btn" href="maharashtra-truck.html">Open</a>
                <a class="btn" target="_blank" rel="noopener" href="https://www.youtube.com/watch?v=7zgsyIyo7qQ">Video</a>
             </div>
           </div>
@@ -151,7 +151,7 @@
               <span class="tag">Virtual Reality</span>
             </div>
             <div class="actions">
-              <a class="btn" href="projects/dental-vr.html">Open</a>
+              <a class="btn" href="dental-vr.html">Open</a>
               <a class="btn" target="_blank" rel="noopener" href="https://youtu.be/q3jmrM6cjmI">Video</a>
             </div>
           </div>
@@ -166,7 +166,7 @@
               <span class="tag">Video Production</span>
             </div>
             <div class="actions">
-              <a class="btn" href="projects/ravana-vr.html">Open</a>
+              <a class="btn" href="ravana-vr.html">Open</a>
               <a class="btn" target="_blank" rel="noopener" href="https://youtu.be/1x3rMaC1Cc4">Video</a>
             </div>
           </div>
