--- a/asters.html
+++ b/asters.html
@@ -114,22 +114,20 @@
 
     <!-- Workflow (A-1.png ... A-6.png) -->
     <section>
-      <div class="panel">
-        <h2>Workflow</h2>
-        <div class="wf-grid">
-          <div class="wf-card"><img src="A-1.png" alt="Workflow step 1"></div>
-          <div class="wf-arrow">→</div>
-          <div class="wf-card"><img src="A-2.png" alt="Workflow step 2"></div>
-          <div class="wf-arrow">→</div>
-          <div class="wf-card"><img src="A-3.png" alt="Workflow step 3"></div>
-          <div class="wf-arrow">→</div>
-          <div class="wf-card"><img src="A-4.png" alt="Workflow step 4"></div>
-          <div class="wf-arrow">→</div>
-          <div class="wf-card"><img src="A-5.png" alt="Workflow step 5"></div>
-          <div class="wf-arrow">→</div>
-          <div class="wf-card"><img src="A-6.png" alt="Workflow step 6"></div>
-        </div>
-      </div>
+      <div class="wf-grid">
+  <div class="wf-card"><img src="A-1.jpg" alt="Workflow step 1" loading="lazy"></div>
+  <div class="wf-arrow">→</div>
+  <div class="wf-card"><img src="A-2.png" alt="Workflow step 2" loading="lazy"></div>
+  <div class="wf-arrow">→</div>
+  <div class="wf-card"><img src="A-3.jpg" alt="Workflow step 3" loading="lazy"></div>
+  <div class="wf-arrow">→</div>
+  <div class="wf-card"><img src="A-4.png" alt="Workflow step 4" loading="lazy"></div>
+  <div class="wf-arrow">→</div>
+  <div class="wf-card"><img src="A-5.png" alt="Workflow step 5" loading="lazy"></div>
+  <div class="wf-arrow">→</div>
+  <div class="wf-card"><img src="A-6.png" alt="Workflow step 6" loading="lazy"></div>
+</div>
+
     </section>
   </main>
 
