--- a/index.html
+++ b/index.html
@@ -157,6 +157,6 @@
     </section>
   </main>
 
-  <footer>© 2025 Professional Portfolio</footer>
+  <footer>© 2025  Portfolio</footer>
 </body>
 </html>
