--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>ASTERS — Active Shooter Tracking & Evacuation Routing — Project</title>
+  <meta name="description" content="ASTERS: Unreal Engine + Python/OpenCV simulation for intelligent evacuation routing with real-time pathfinding and LED guidance." />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
   <style>
     :root{
@@ -16,24 +18,58 @@
       --brand:#2563eb;
       --radius:12px;
       --shadow:0 2px 8px rgba(0,0,0,.06);
+      --header-h:56px;
     }
     *{box-sizing:border-box}
     html{scroll-behavior:smooth}
-    body{margin:0; font-family:Inter, system-ui, -apple-system, Segoe UI, Roboto, Arial; color:var(--text); background:var(--bg); line-height:1.6}
+    body{
+      margin:0;
+      font-family:Inter, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+      color:var(--text);
+      background:var(--bg);
+      line-height:1.6;
+      padding-top:var(--header-h); /* avoid overlap under sticky header */
+      -webkit-font-smoothing:antialiased;
+      -moz-osx-font-smoothing:grayscale;
+    }
     a{color:var(--brand); text-decoration:none}
     a:hover{text-decoration:underline}
-    img{max-width:100%; display:block}
+    img{max-width:100%; display:block; height:auto}
     .wrap{width:min(1100px,92vw); margin:0 auto}
-    header.top{position:sticky; top:0; z-index:10; background:rgba(247,248,250,.75); backdrop-filter:blur(8px); border-bottom:1px solid var(--border)}
-    .top-inner{display:flex; align-items:center; justify-content:space-between; gap:12px; padding:10px 14px}
-    .btn{padding:8px 12px; border-radius:10px; border:1px solid var(--border); background:#f8fafc; color:#111827; text-decoration:none}
+    /* Header */
+    header.top{
+      position:sticky; top:0; z-index:10;
+      background:rgba(247,248,250,.75);
+      backdrop-filter:blur(8px);
+      border-bottom:1px solid var(--border);
+      height:var(--header-h);
+    }
+    .top-inner{
+      height:100%;
+      display:flex; align-items:center; justify-content:space-between;
+      gap:12px; padding:0 14px;
+    }
+    .btn{padding:8px 12px; border-radius:10px; border:1px solid var(--border); background:#f8fafc; color:#111827; text-decoration:none; display:inline-flex; align-items:center; gap:8px}
     .btn:hover{background:#eef2f7}
     /* Hero */
-    .hero{height:min(36vh,360px); background:#ddd center/cover no-repeat; background-image:url('../A.png')}
+    .hero{
+      height:min(36vh,360px);
+      background:#ddd center/cover no-repeat;
+      /* NOTE: update path if your image is elsewhere */
+      background-image:url('../A.png');
+    }
     main section{padding:28px 0}
-    .panel{background:var(--surface); border:1px solid var(--border); border-radius:16px; padding:14px; box-shadow:var(--shadow)}
+    .panel{
+      background:var(--surface);
+      border:1px solid var(--border);
+      border-radius:16px;
+      padding:14px;
+      box-shadow:var(--shadow);
+    }
     h1{font-size:clamp(1.8rem,4.4vw,2.6rem); line-height:1.1; margin:0 0 8px}
     h2{font-size:1.4rem; margin:0 0 12px}
+    p{margin:0 0 10px}
+    ul{margin:0; padding-left:18px}
     .tags{display:flex; gap:8px; flex-wrap:wrap; margin-top:8px}
     .tag{background:var(--chip); color:#374151; padding:6px 10px; border-radius:999px; font-size:.9rem}
     .two{display:grid; grid-template-columns:1fr 1fr; gap:16px}
@@ -52,7 +88,7 @@
     /* back plate (outlayer) */
     .wf-card::before{
       content:"";
-      position:absolute; inset:10px -10px -10px 10px;  /* tweak for more/less reveal */
+      position:absolute; inset:10px -10px -10px 10px;  /* adjust for reveal */
       background:#ffffff;
       border-radius:18px;
       box-shadow:0 10px 26px rgba(0,0,0,.12), 0 2px 6px rgba(0,0,0,.06);
@@ -66,30 +102,37 @@
       background:#f5f5f5;
     }
     .wf-card img{width:100%; height:100%; object-fit:cover}
-    .wf-arrow{grid-column:span 1; text-align:center; color:#9ca3af; font-size:1.6rem}
+    .wf-arrow{
+      grid-column:span 1; text-align:center; color:#9ca3af;
+      font-size:0; /* hide text, rely on SVG for the icon */
+      display:flex; align-items:center; justify-content:center;
+    }
+    .wf-arrow svg{width:24px; height:24px; opacity:.9}
     footer{padding:28px 0; color:#6b7280; text-align:center}
   </style>
 </head>
 <body>
-  <header class="top">
+  <header class="top" role="banner">
     <div class="wrap top-inner">
-      <div class="crumbs"><a href="../index.html">← Back</a></div>
-      <div class="btns">
-        <a class="btn" target="_blank" rel="noopener" href="https://youtu.be/vZf56XWqUsY">Video</a>
-        <a class="btn" target="_blank" rel="noopener" href="https://drive.google.com/file/d/1XUJs0Y8INELjnUNagX6r9uAhdaMSqK4y/view?usp=drive_link">Report</a>
+      <nav class="crumbs" aria-label="Breadcrumb">
+        <a href="../index.html">← Back</a>
+      </nav>
+      <div class="btns" role="navigation" aria-label="Project links">
+        <a class="btn" target="_blank" rel="noopener noreferrer" href="https://youtu.be/vZf56XWqUsY" aria-label="Watch project video on YouTube">Video</a>
+        <a class="btn" target="_blank" rel="noopener noreferrer" href="https://drive.google.com/file/d/1XUJs0Y8INELjnUNagX6r9uAhdaMSqK4y/view?usp=drive_link" aria-label="Open project report">Report</a>
       </div>
     </div>
   </header>
 
   <!-- Hero -->
-  <div class="hero" title="ASTERS hero"></div>
+  <div class="hero" role="img" aria-label="ASTERS project hero image"></div>
 
-  <main class="wrap">
+  <main class="wrap" id="main-content">
     <!-- Intro -->
-    <section>
+    <section aria-labelledby="title-intro">
       <div class="panel" style="margin-top:-30px">
-        <h1>ASTERS — Active Shooter Tracking & Evacuation Routing</h1>
-        <div class="tags">
+        <h1 id="title-intro">ASTERS — Active Shooter Tracking & Evacuation Routing</h1>
+        <div class="tags" aria-label="Tags">
           <span class="tag">Simulation</span>
           <span class="tag">Unreal + Python</span>
           <span class="tag">OpenCV</span>
@@ -109,7 +152,7 @@
     </section>
 
     <!-- Role / Tools -->
-    <section class="two">
+    <section class="two" aria-label="Role and tools">
       <div class="panel">
         <h2>My role</h2>
         <p>Environment and behavior logic; camera tools; egress routing & LED guidance integration; logging & analysis pipeline.</p>
@@ -123,9 +166,9 @@
     </section>
 
     <!-- Process -->
-    <section>
+    <section aria-labelledby="process-title">
       <div class="panel">
-        <h2>Process</h2>
+        <h2 id="process-title">Process</h2>
         <ul>
           <li>Translate floor plans into a navigable 3D environment with NavMesh and agents.</li>
           <li>In Python/OpenCV, detect target events and stream positions into UE actors.</li>
@@ -137,26 +180,60 @@
     </section>
 
     <!-- Workflow (two-layer cards) -->
-    <section>
+    <section aria-labelledby="workflow-title">
       <div class="panel">
-        <h2>Workflow</h2>
-        <div class="wf-grid">
-          <div class="wf-card"><div class="pic"><img src="../A-1.jpg" alt="Workflow step 1" loading="lazy"></div></div>
-          <div class="wf-arrow">→</div>
-          <div class="wf-card"><div class="pic"><img src="../A-2.png" alt="Workflow step 2" loading="lazy"></div></div>
-          <div class="wf-arrow">→</div>
-          <div class="wf-card"><div class="pic"><img src="../A-3.jpg" alt="Workflow step 3" loading="lazy"></div></div>
-          <div class="wf-arrow">→</div>
-          <div class="wf-card"><div class="pic"><img src="../A-4.png" alt="Workflow step 4" loading="lazy"></div></div>
-          <div class="wf-arrow">→</div>
-          <div class="wf-card"><div class="pic"><img src="../A-5.png" alt="Workflow step 5" loading="lazy"></div></div>
-          <div class="wf-arrow">→</div>
-          <div class="wf-card"><div class="pic"><img src="../A-6.png" alt="Workflow step 6" loading="lazy"></div></div>
+        <h2 id="workflow-title">Workflow</h2>
+        <div class="wf-grid" role="list">
+          <div class="wf-card" role="listitem">
+            <div class="pic">
+              <img src="../A-1.jpg" alt="Workflow step 1: environment setup" loading="lazy" />
+            </div>
+          </div>
+          <div class="wf-arrow" aria-hidden="true">
+            <svg viewBox="0 0 24 24" focusable="false" aria-hidden="true"><path d="M8 4l8 8-8 8" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
+          </div>
+          <div class="wf-card" role="listitem">
+            <div class="pic">
+              <img src="../A-2.png" alt="Workflow step 2: detection feed" loading="lazy" />
+            </div>
+          </div>
+          <div class="wf-arrow" aria-hidden="true">
+            <svg viewBox="0 0 24 24" focusable="false" aria-hidden="true"><path d="M8 4l8 8-8 8" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
+          </div>
+          <div class="wf-card" role="listitem">
+            <div class="pic">
+              <img src="../A-3.jpg" alt="Workflow step 3: pathfinding" loading="lazy" />
+            </div>
+          </div>
+          <div class="wf-arrow" aria-hidden="true">
+            <svg viewBox="0 0 24 24" focusable="false" aria-hidden="true"><path d="M8 4l8 8-8 8" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
+          </div>
+          <div class="wf-card" role="listitem">
+            <div class="pic">
+              <img src="../A-4.png" alt="Workflow step 4: LED guidance" loading="lazy" />
+            </div>
+          </div>
+          <div class="wf-arrow" aria-hidden="true">
+            <svg viewBox="0 0 24 24" focusable="false" aria-hidden="true"><path d="M8 4l8 8-8 8" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
+          </div>
+          <div class="wf-card" role="listitem">
+            <div class="pic">
+              <img src="../A-5.png" alt="Workflow step 5: analytics & logging" loading="lazy" />
+            </div>
+          </div>
+          <div class="wf-arrow" aria-hidden="true">
+            <svg viewBox="0 0 24 24" focusable="false" aria-hidden="true"><path d="M8 4l8 8-8 8" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
+          </div>
+          <div class="wf-card" role="listitem">
+            <div class="pic">
+              <img src="../A-6.png" alt="Workflow step 6: reporting" loading="lazy" />
+            </div>
+          </div>
         </div>
       </div>
     </section>
   </main>
 
-  <footer>© 2025  Portfolio</footer>
+  <footer role="contentinfo">© 2025 Portfolio</footer>
 </body>
 </html>
