--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
               <span class="tag">VR</span>
             </div>
             <div class="actions">
-              <a class="btn" href="projects/maharashtra-truck.html">Open</a>
+              <a class="btn" href="maharashtra-truck.html">Open</a>
             </div>
           </div>
         </article>
