--- a/asters.html
+++ b/asters.html
@@ -113,24 +113,16 @@
     </section>
 
     <!-- Workflow (updated paths & lazy-loading) -->
-    <section>
-      <div class="panel">
-        <h2>Workflow</h2>
-        <div class="wf-grid">
-          <div class="wf-card"><img src="A-1.jpg" alt="Workflow step 1" loading="lazy"></div>
-          <div class="wf-arrow">→</div>
-          <div class="wf-card"><img src="A-2.png" alt="Workflow step 2" loading="lazy"></div>
-          <div class="wf-arrow">→</div>
-          <div class="wf-card"><img src="A-3.jpg" alt="Workflow step 3" loading="lazy"></div>
-          <div class="wf-arrow">→</div>
-          <div class="wf-card"><img src="A-4.png" alt="Workflow step 4" loading="lazy"></div>
-          <div class="wf-arrow">→</div>
-          <div class="wf-card"><img src="A-5.png" alt="Workflow step 5" loading="lazy"></div>
-          <div class="wf-arrow">→</div>
-          <div class="wf-card"><img src="A-6.png" alt="Workflow step 6" loading="lazy"></div>
-        </div>
-      </div>
-    </section>
+   <!-- Workflow (single image only) -->
+<section>
+  <div class="panel">
+    <h2>Workflow</h2>
+    <div style="display:flex; justify-content:center;">
+      <img src="A-1.png" alt="Workflow" loading="lazy" 
+           style="max-width:100%; height:auto; border-radius:12px; border:1px solid var(--border); box-shadow:var(--shadow);">
+    </div>
+  </div>
+</section>
   </main>
 
   <footer>© 2025 Professional Portfolio</footer>
