--- a/maharashtra-truck.html
+++ b/maharashtra-truck.html
@@ -45,7 +45,7 @@
     <div class="wrap top-inner">
       <div class="crumbs"><a href="index.html">← Back</a></div>
       <div class="btns">
-        <a class="btn" target="_blank" rel="noopener" href="#">Video</a>
+        <a class="btn" target="_blank" rel="noopener" href="https://youtu.be/vZf56XWqUsY">Video</a>
         <a class="btn" target="_blank" rel="noopener" href="#">Report</a>
       </div>
     </div>
@@ -104,28 +104,17 @@
     </section>
 
     <!-- Workflow -->
-    <section>
-      <div class="panel">
-        <h2>Workflow</h2>
-        <div style="display:grid;grid-template-columns:repeat(12,1fr);gap:12px;align-items:center">
-          <div style="grid-column:span 4;border:1px dashed var(--border);border-radius:12px;background:#fff;height:150px;overflow:hidden">
-            <img src="M-1.png" alt="Workflow step 1" style="width:100%;height:100%;object-fit:cover" loading="lazy">
-          </div>
-          <div style="grid-column:span 1;text-align:center;color:#9ca3af">→</div>
-          <div style="grid-column:span 4;border:1px dashed var(--border);border-radius:12px;background:#fff;height:150px;overflow:hidden">
-            <img src="M-2.png" alt="Workflow step 2" style="width:100%;height:100%;object-fit:cover" loading="lazy">
-          </div>
-          <div style="grid-column:span 1;text-align:center;color:#9ca3af">→</div>
-          <div style="grid-column:span 4;border:1px dashed var(--border);border-radius:12px;background:#fff;height:150px;overflow:hidden">
-            <img src="M-3.png" alt="Workflow step 3" style="width:100%;height:100%;object-fit:cover" loading="lazy">
-          </div>
-          <div style="grid-column:span 1;text-align:center;color:#9ca3af">→</div>
-          <div style="grid-column:span 4;border:1px dashed var(--border);border-radius:12px;background:#fff;height:150px;overflow:hidden">
-            <img src="M-4.png" alt="Workflow step 4" style="width:100%;height:100%;object-fit:cover" loading="lazy">
-          </div>
-        </div>
-      </div>
-    </section>
+   <!-- Workflow (single image only) -->
+<section>
+  <div class="panel">
+    <h2>Workflow</h2>
+    <div style="display:flex; justify-content:center;">
+      <img src="M-1.png" alt="Workflow" loading="lazy" 
+           style="max-width:100%; height:auto; border-radius:12px; border:1px solid var(--border); box-shadow:var(--shadow);">
+    </div>
+  </div>
+</section>
+
   </main>
 
   <footer>© 2025 Professional Portfolio</footer>
