--- a/maharashtra-truck.html
+++ b/maharashtra-truck.html
@@ -19,16 +19,27 @@
     }
     *{box-sizing:border-box}
     html{scroll-behavior:smooth}
-    body{margin:0; font-family:Inter, system-ui, -apple-system, Segoe UI, Roboto, Arial; color:var(--text); background:var(--bg); line-height:1.6}
+    body{
+      margin:0; font-family:Inter, system-ui, -apple-system, Segoe UI, Roboto, Arial;
+      color:var(--text); background:var(--bg); line-height:1.6;
+    }
     a{color:var(--brand); text-decoration:none}
     a:hover{text-decoration:underline}
     img{max-width:100%; display:block}
     .wrap{width:min(1100px,92vw); margin:0 auto}
-    header.top{position:sticky; top:0; z-index:10; background:rgba(247,248,250,.75); backdrop-filter:blur(8px); border-bottom:1px solid var(--border)}
+    header.top{
+      position:sticky; top:0; z-index:10;
+      background:rgba(247,248,250,.75); backdrop-filter:blur(8px);
+      border-bottom:1px solid var(--border)
+    }
     .top-inner{display:flex; align-items:center; justify-content:space-between; gap:12px; padding:10px 14px}
-    .btn{padding:8px 12px; border-radius:10px; border:1px solid var(--border); background:#f8fafc; color:#111827; text-decoration:none}
+    .btn{padding:8px 12px; border-radius:10px; border:1px solid var(--border); background:#f8fafc; color:#111827}
     .btn:hover{background:#eef2f7}
-    .hero{height:min(36vh,360px); background:#ddd center/cover no-repeat; background-image:url('M.png')}
+    .hero{
+      height:min(36vh,360px);
+      background:#ddd center/cover no-repeat;
+      background-image:url('M.png');
+    }
     main section{padding:28px 0}
     .panel{background:var(--surface); border:1px solid var(--border); border-radius:16px; padding:14px; box-shadow:var(--shadow)}
     h1{font-size:clamp(1.8rem,4.4vw,2.6rem); line-height:1.1; margin:0 0 8px}
@@ -65,7 +76,8 @@
           <span class="tag">Blueprints</span>
         </div>
         <p>
-          A detailed virtual simulation of the Maharashtra truck transportation model, focusing on realistic road environments, vehicle behavior, and operational logistics. 
+          A detailed virtual simulation of the Maharashtra truck transportation model, focusing on realistic road environments,
+          vehicle behavior, and operational logistics.
         </p>
         <p>
           <strong>Client:</strong> Transport Authority of Maharashtra<br>
@@ -103,18 +115,20 @@
       </div>
     </section>
 
-    <!-- Workflow -->
-   <!-- Workflow (single image only) -->
-<section>
-  <div class="panel">
-    <h2>Workflow</h2>
-    <div style="display:flex; justify-content:center;">
-      <img src="M-1.png" alt="Workflow" loading="lazy" 
-           style="max-width:100%; height:auto; border-radius:12px; border:1px solid var(--border); box-shadow:var(--shadow);">
-    </div>
-  </div>
-</section>
-
+    <!-- Workflow (single image only, responsive 1234×510) -->
+    <section>
+      <div class="panel">
+        <h2>Workflow</h2>
+        <div style="display:flex; justify-content:center;">
+          <img
+            src="M-1.png"
+            alt="Workflow"
+            loading="lazy"
+            style="max-width:100%; height:auto; border-radius:12px; border:1px solid var(--border); box-shadow:var(--shadow);"
+          >
+        </div>
+      </div>
+    </section>
   </main>
 
   <footer>© 2025 Professional Portfolio</footer>
