--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     </div>
   </header>
 
-  <div class="cover" title="Cover image"></div>
+  <div class="cover" title="BG_1.JPG"></div>
 
   <main class="wrap">
     <section>
@@ -104,7 +104,7 @@
             real-time 3D, and human-centered design—focused on simulation, interaction, and digital twins.
           </p>
         </div>
-        <div class="portrait" style="background-image:url('BG_1.JPG')" title="Profile photo"></div>
+        <div class="portrait" style="background-image:url('Profile.png')" title="Profile photo"></div>
       </div>
     </section>
 
